# openmfda_flow

./: .gitignore  .gitmodules  CITATION.cff  Dockerfile  Makefile  README.md  README.txt  benchmark.py  benchmarks.sh  demo_configure.py  design_automation.py  file_generation.py  kahypar_notes  library_adjust.py  main.py  mfda_objects.py  mtk.sh  openmfda_class.py  openmfda_flow.py  openmfda_flow_.py  prog_notes.txt  pyproject.toml  python-requirements.txt  python3-networkx.json  requirements.txt  requirements_py.txt  run_flow.ipynb  run_mfda_docker.py  set_openmfda_env_vars.sh  src  test_dicts.py  todo
OPENMFD(AI)/: AI_2.ipynb  AI_3-MFDA.ipynb  Readme
flow/: Makefile  benchmarks.sh  extract.py
openmfda_flow_py_support/: pyproject.toml
openmfda_flow_py_support/src/openmfda_flow/: def_grammer.py  def_obj_grammer.py  def_parse.py  get_placement_data.py  local_mfda_docker.py  read_netlist.py  replace_iter.py  tcl_comm.py  verilog_grammer.lark  verilog_grammer.py
openmfda_flow_py_support/src/openmfda_flow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openmfda_flow_py_support/src/openmfda_flow_main/: component_parse.py  def_grammer.py  def_obj_grammer.py  get_placement_data.py  openmfda_flow_0_2.py  parser.out  parsetab.py  render_def.py  verilog_grammer.lark  verilog_grammer.py  write_replace_tcl.py
openroad_flow/: .gitignore  Makefile
pnr/: Makefile  setup_env.sh
python/: 20-pixels valves - 191229.scad  3_place copy.def  3_place.def  6_final copy 10.def  6_final copy 11.def  6_final copy 12.def  6_final copy 13.def  6_final copy 14.def  (+23 more)
(+6718 files in other folders)
