
[project]
name = "openmfda_flow"
version = "1.0.0"
dependencies = [
    "solidpython==1.1.3",
    "numpy==1.23.5",
    "numpy-stl==3.1.1",
    "pandas==1.5.2",
    "PyQt5==5.15.10",
    "Pillow==10.2.0",
]
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools]
package-dir= {"" = "src"}
packages = ["openmfda_flow"]

[project.urls]
Homepage="https://github.com/utah-MFDA/openmfda_flow"